--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,7 +1,7 @@
 # Original credit: https://github.com/jpetazzo/dockvpn
 
 # Smallest base image
-FROM hypriot/rpi-alpine:latest
+FROM easypi/alpine-arm:latest
 
 MAINTAINER Kyle Manna <kyle@kylemanna.com>
 
